samples/_failures_safe/1761729048_82ddaf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a895c730.c: In function ‘main’:
./samples/SAFE/__tmp_a895c730.c:152:17: error: expected declaration or statement at end of input
  152 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_a895c730.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a895c730.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a895c730.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a895c730.c:152:17: error: expected declaration or statement at end of input
